# path_tracer_ai

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  compile_ptx.bat  convert_to_png.py
include/: aabb.hpp  bvh.hpp  camera.hpp  intersection.hpp  material.hpp  ray.hpp  renderer.hpp  scene.hpp  triangle.hpp
include/gpu/: cuda_utils.hpp  cuda_utils_device.hpp  optix_renderer.hpp  optix_types.hpp
include/math/: vec_math.hpp
include/optix/: launch_params.hpp  pipeline.hpp  scene.hpp
include/utils/: image_utils.hpp
src/: check_optix.cpp  main.cpp  renderer.cpp  scene.cpp
src/gpu/: cuda_utils.cu  cuda_utils.inl  optix_renderer.cu
src/gpu/ptx/: optix_kernels.cu
src/optix/: pipeline.cpp  scene.cpp  shaders.cu
